# oracle_free_vm

./: .gitignore  README  compartment.tf  main.tf  ociprovider.tf  pyproject.toml  variables.tf
bootstrapping/: init.sh
docker/: Caddyfile  Caddyfile.dev  Makefile  compose.service  docker-compose-dev.yml  docker-compose.yml  nginx.conf  nginx.conf.dev
terraform/: main.tf  variables.tf
