[tool.poetry]
name = "oracle-free-vm"
version = "0.1.0"
description = "Infrastructure code for my Oracle Hosted projects."
authors = ["Ramanan Sivaranjan <ramanan@funkaoshi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^9.3.0"

[tool.poetry.group.dev.dependencies]
black = "~24"
ruff = "*"
pre-commit = "~3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
